add ° to the units

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
               <i class="fas fa-cloud-sun"></i>
             </div>
             <div class="col-12 current-weather_temp">
-              <div class="current-temp">18°</div>
+              <div class="current-temp">18</div>
               <span class="celfah">
                 <span>
-                  <button id="celsius">C</button>
+                  <button id="celsius">°C</button>
                 </span>
                 |
                 <span>
-                  <button id="fahrenheit">F</button>
+                  <button id="fahrenheit">°F</button>
                 </span>
               </span>
             </div>
