add opensorce and comment out background on the container-left

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
       </div>
     </div>
-
+     <small><a href="https://github.com/SarahPruene/Shecodes-weather-app" target="_blank">Open-source code</a>, by Sarah Pruene</small>
     <script src="/src/index.js"></script>
   </body>
 </html>
