add the small div under the container div

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           </div>
 
           <div class="row current-infobox">
-            <div class="col-6 info" >Feels like:</div>
+            <div class="col-6 info">Feels like:</div>
             <div class="col-6 info_details" id="precipitation"></div>
-            <div class="col-6 info" >Humandity:</div>
+            <div class="col-6 info">Humandity:</div>
             <div class="col-6 info_details" id="humandity"></div>
             <div class="col-6 info">Winds:</div>
             <div class="col-6 info_details" id="wind"></div>
@@ -76,9 +76,7 @@
         </form>
 
         <div class="forecast-wrapper">
-          <h2 class="forecast-wrapper-title">
-            Forecast
-          </h2>
+          <h2 class="forecast-wrapper-title">Forecast</h2>
           <div class="forecast-tmw">
             <div class="forecast-tmw-icon">
               <i class="fas fa-cloud-sun"></i>
@@ -111,59 +109,50 @@
               18°
               <br />
               <span class="celfar">
-                <span class="celcius">
-                  C
-                </span>
+                <span class="celcius"> C </span>
                 |
-                <span class="fahrenheit">
-                  F
-                </span>
+                <span class="fahrenheit"> F </span>
               </span>
             </div>
             <div class="col-3 forecast-nxt temp">
               18°
               <br />
               <span class="celfar">
-                <span class="celcius">
-                  C
-                </span>
+                <span class="celcius"> C </span>
                 |
-                <span class="fahrenheit">
-                  F
-                </span>
+                <span class="fahrenheit"> F </span>
               </span>
             </div>
             <div class="col-3 forecast-nxt temp">
               18°
               <br />
               <span class="celfar">
-                <span class="celcius">
-                  C
-                </span>
+                <span class="celcius"> C </span>
                 |
-                <span class="fahrenheit">
-                  F
-                </span>
+                <span class="fahrenheit"> F </span>
               </span>
             </div>
             <div class="col-3 forecast-nxt temp">
               18°
               <br />
               <span class="celfar">
-                <span class="celcius">
-                  C
-                </span>
+                <span class="celcius"> C </span>
                 |
-                <span class="fahrenheit">
-                  F
-                </span>
+                <span class="fahrenheit"> F </span>
               </span>
             </div>
           </div>
         </div>
       </div>
+      <small
+        ><a
+          href="https://github.com/SarahPruene/Shecodes-weather-app"
+          target="_blank"
+          >Open-source code</a
+        >, by Sarah Pruene</small
+      >
     </div>
-     <small><a href="https://github.com/SarahPruene/Shecodes-weather-app" target="_blank">Open-source code</a>, by Sarah Pruene</small>
+
     <script src="/src/index.js"></script>
   </body>
 </html>
